--- a/newPage.html
+++ b/newPage.html
@@ -4,5 +4,6 @@
 <body>
 <h1>Rock Paper Scissors Game</h1>
 <p>What do you choose?</p>
+  <a href='./index.html'>Go back to home page</a>
 </body>
 </html>
